force-app/main/default/objects/Quote/Quote.object-meta.xml
<CustomObject>
    <label>Quote</label>
    <description></description>
</CustomObject>