force-app/main/default/objects/Quote/fields/Julian_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Julian_Test_Field__c</fullName>
    <label>Julian Test Field</label>
    <type>Text</type>
    <length>255</length>
</CustomField>