force-app/main/default/objects/Quote/fields/ProposalDuration__c.field-meta.xml
<CustomField>
    <fullName>ProposalDuration__c</fullName>
    <label>Proposal Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Proposal_Duration</valueSetName>
    </valueSet>
</CustomField>