force-app/main/default/objects/Quote/fields/ProposedACV__c.field-meta.xml
<CustomField>
    <fullName>ProposedACV__c</fullName>
    <label>Proposed ACV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Proposed_ACV</valueSetName>
    </valueSet>
</CustomField>